possible laggy animation fix on mobile.

--- a/components/Modal/Modal.css
+++ b/components/Modal/Modal.css
@@ -1,10 +1,6 @@
 @import '../_utils/globals/screens.css';
 
 .modal {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 8px;
     position: fixed;
     top: 0px;
     right: 0;
@@ -12,10 +8,10 @@
     background: #fff;
     margin-right: auto;
     margin-left: auto;
+    border-radius: 8px;
     width: 60%;
     transition: 0.3s;
     z-index: 5;
-    overflow: hidden;    
 }
 
 .modalOn{
@@ -25,7 +21,7 @@
 
 .modalOff{
     opacity: 0;
-    top: -500px;
+    top: 0;
 }
 
 .cover{
@@ -50,6 +46,10 @@
     z-index: 1;
     opacity: 1;
     transition: z-index 0.5s step-start, opacity 0.3s linear;
+}
+
+.contentOff{
+    display: none;
 }
 
 @media (--small){
